--- a/1.php性能优化.md
+++ b/1.php性能优化.md
@@ -1,19 +1,19 @@
 ###对字符串使用单引号
 使用双引号的字符串告诉 PHP 引擎首先去读取字符串内容，查找其中的变量，并改为变量对应的值
 ```php
-bad
+// bad
 $output = "Hello World";
 
-good
+// good
 $output = 'Hello World';
 ```
 ###不要随便就复制变量
 如果用户恶意插入 512KB 字节的文字到文本输入框中，这样就会导致 1MB 的内存被消耗
 ```php
-bad
+// bad
 $text = $_POST['text'];
 echo $text;
 
-good
+// good
 echo $_POST['text'];
 ```
