--- a/1.php性能优化.md
+++ b/1.php性能优化.md
@@ -18,7 +18,7 @@ echo $text;
 echo $_POST['text'];
 ```
 ###不要在 echo 中使用连接符
-第一个例子中，使用连接符就会有性能问题，PHP 引擎首先把所有的变量连接起来，然后在输出。  
+第一个例子中，使用连接符就会有性能问题，PHP 引擎首先把所有的变量连接起来，然后在输出 
 第二个例子中，PHP 引擎就会按照循序输出他们
 ```php
 // bad
